@@ -1,5 +1,7 @@
 2013-02-13  Siddhesh Poyarekar  <siddhesh@redhat.com>
 
+	* sysdeps/ieee754/dbl-64/mpexp.c (__mpexp): Remove NFA.
+
 	* sysdeps/ieee754/dbl-64/mpexp.c (__mpexp): Faster polynomial
 	evaluation.
 
